crates/toml_edit/tests/fixtures/invalid/table-array-malformed-empty.stderr
TOML parse error at line 1, column 3
  |
1 | [[]]
  |   ^
Unexpected `]`
Expected key
While parsing a Table Header
